[package]
name = "histop"
version = "0.2.0"
edition = "2024"
description = "Show your most frequently used bash/zsh/fish commands in a visually appealing and easy-to-understand format."
license = "MIT"

[dependencies]
ahash = "0.8.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
