[package]
name = "histop"
version = "0.3.0"
edition = "2024"
description = "Show your most frequently used shell commands in a visually appealing and easy-to-understand format."
license = "MIT"

[dependencies]
ahash = "0.8.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
