[package]
name = "histop"
version = "0.3.1"
edition = "2024"
description = "Show your most frequently used shell commands in a visually appealing and easy-to-understand format."
license = "MIT"

[dependencies]
memmap2 = "0.9"
bstr = "1"
ahash = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.profiling]
inherits = "release"
strip = false
debug = 1
